[package]
name = "rlox"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
enum_primitive = ">=0.1.1"
num = ">= 0.4.3"

[features]
"default" = [ "debug_trace_execution" ]
"debug_trace_execution" = []
